<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="#ffffff"
                android:text="SIGN UP"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/name"
                    android:textColorHint="#ffffff"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:drawablePadding="4dp"
                    android:drawableLeft="@drawable/name"
                    android:background="#33000000"/>

                <EditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/contact"
                    android:textColorHint="#ffffff"
                    android:textColor="#ffffff"
                    android:inputType="number"
                    android:padding="12dp"
                    android:drawablePadding="4dp"
                    android:drawableLeft="@drawable/contact"
                    android:background="#33000000"/>

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/password"
                    android:textColorHint="#ffffff"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:inputType="textPassword"
                    android:drawablePadding="4dp"
                    android:drawableLeft="@drawable/password"
                    android:background="#33000000"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/email"
                    android:textColorHint="#ffffff"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:drawablePadding="4dp"
                    android:drawableLeft="@drawable/mail"
                    android:background="#33000000"/>

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="18sp"
                    android:textColorHint="#ffffff"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:textColor="#ffffff"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:orientation="vertical"
                    android:background="#33000000">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/female"
                            android:layout_weight="1"
                            android:textColor="#ffffff"/>
                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/male"
                            android:layout_weight="1"
                            android:textColor="#ffffff"/>

                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userregistration"
                android:textColor="#ffffff"
                android:padding="12dp"
                android:background="@color/end"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Already a user? Login here."
                android:textColor="#ffffff"
                android:layout_marginBottom="30dp"
                android:textSize="18sp"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>